--- a/src/main/resources/fxml/filmsWindow.fxml
+++ b/src/main/resources/fxml/filmsWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
@@ -7,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="862.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uf2.mp3.control.FilmsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="512.0" prefWidth="862.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="uf2.mp3.control.FilmsController">
     <children>
         <TabPane fx:id="tabPane" prefHeight="512.0" prefWidth="862.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <tabs>
@@ -15,53 +16,53 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="475.0" prefWidth="833.0" style="-fx-background-color: #00ebc4;">
                             <children>
-                                <AnchorPane cache="true" layoutX="412.0" layoutY="-2.0" prefHeight="487.0" prefWidth="450.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="-6.0" AnchorPane.leftAnchor="412.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-2.0">
-                                    <children>
-                                        <AnchorPane fx:id="paneSesion" layoutX="-412.0" layoutY="-1.0" prefHeight="484.0" prefWidth="862.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="4.0" AnchorPane.leftAnchor="-412.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0">
-                                            <children>
-                                                <Text fx:id="sesionTitle" fill="#00000096" layoutX="30.0" layoutY="-25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="sesion" wrappingWidth="646.7294921875" y="80.0" AnchorPane.bottomAnchor="415.63232421875" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="192.2705078125" AnchorPane.topAnchor="29.93798828125">
-                                                    <font>
-                                                        <Font name="System Bold" size="27.0" />
-                                                    </font></Text>
-                                                <TableView fx:id="tableViewSesiones" layoutX="65.0" layoutY="122.0" prefHeight="336.0" prefWidth="678.0" AnchorPane.bottomAnchor="19.0" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="126.0" AnchorPane.topAnchor="122.0">
-                                                    <columns>
-                                                        <TableColumn fx:id="tableColumnTitleCinema" minWidth="150.0" prefWidth="75.0" text="Cine" />
-                                                        <TableColumn fx:id="tableColumnSesion" minWidth="150.0" prefWidth="75.0" text="Sesion" />
-                                                    </columns>
-                                                </TableView>
-                                            </children>
-                                        </AnchorPane>
-                                        <AnchorPane layoutX="-414.0" layoutY="2.0" prefHeight="479.0" prefWidth="411.0" style="-fx-background-color: #00ebc4;" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="-414.0" AnchorPane.rightAnchor="453.0" AnchorPane.topAnchor="2.0">
-                                            <children>
-                                                <ListView fx:id="listViewFilms" layoutX="74.0" layoutY="65.0" onMouseClicked="#displaySelected" prefHeight="350.0" prefWidth="280.0" style="-fx-background-color: #00d1ae;" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="74.0" AnchorPane.rightAnchor="58.0" AnchorPane.topAnchor="65.0">
-                                                    <padding>
-                                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                                    </padding>
-                                                </ListView>
-                                            </children></AnchorPane>
-                                        <AnchorPane layoutX="-2.0" prefHeight="481.0" prefWidth="455.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="1.0">
-                                            <children>
-                                                <Text fx:id="textTitleFilm" fill="#7c7c7c" layoutX="59.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Titulo" wrappingWidth="319.7294921875">
-                                                    <font>
-                                                        <Font name="System Bold" size="16.0" />
-                                                    </font>
-                                                </Text>
-                                                <ImageView fx:id="imageFilm" fitHeight="181.0" fitWidth="114.0" layoutX="32.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true" />
-                                                <Text fx:id="directorTitle" fill="#616161" layoutX="170.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dirección:">
-                                                    <font>
-                                                        <Font name="System Bold" size="12.0" />
-                                                    </font>
-                                                </Text>
-                                                <Text fx:id="direcctorFilm" fill="#4a4a4a" layoutX="169.0" layoutY="197.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="182.13671875" />
-                                                <Text fx:id="añoTitle" fill="#616161" layoutX="169.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Año:">
-                                                    <font>
-                                                        <Font name="System Bold" size="12.0" />
-                                                    </font>
-                                                </Text>
-                                                <Text fx:id="añoFilm" fill="#4a4a4a" layoutX="170.0" layoutY="151.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-                                                <Button fx:id="buttonSesion" layoutX="238.0" layoutY="427.0" mnemonicParsing="false" onMouseClicked="#clickFilmSesion" prefHeight="26.0" prefWidth="134.0" text="Ver sesiones" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="104.0" />
-                                            </children></AnchorPane>
-                                    </children></AnchorPane>
+                                  <AnchorPane fx:id="paneSesion" prefHeight="478.0" prefWidth="870.0" style="-fx-background-color: #ffffff;">
+                                      <children>
+                                          <Text fx:id="sesionTitle" fill="#00000096" layoutX="30.0" layoutY="-25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="sesion" wrappingWidth="646.7294921875" y="80.0" AnchorPane.bottomAnchor="415.63232421875" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="192.2705078125" AnchorPane.topAnchor="29.93798828125">
+                                              <font>
+                                                  <Font name="System Bold" size="27.0" />
+                                              </font>
+                              </Text>
+                                          <TableView fx:id="tableViewSesiones" layoutX="65.0" layoutY="122.0" prefHeight="336.0" prefWidth="678.0" AnchorPane.bottomAnchor="19.0" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="126.0" AnchorPane.topAnchor="122.0">
+                                              <columns>
+                                                  <TableColumn fx:id="tableColumnTitleCinema" minWidth="150.0" prefWidth="75.0" text="Cine" />
+                                                  <TableColumn fx:id="tableColumnSesion" minWidth="150.0" prefWidth="75.0" text="Sesion" />
+                                              </columns>
+                                          </TableView>
+                                      </children>
+                                  </AnchorPane>
+                                  <AnchorPane layoutY="-3.0" prefHeight="484.0" prefWidth="461.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="404.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="-3.0">
+                                      <children>
+                                          <Text fx:id="textTitleFilm" fill="#7c7c7c" layoutX="59.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Titulo" wrappingWidth="319.7294921875" AnchorPane.bottomAnchor="411.2265625" AnchorPane.rightAnchor="82.2705078125" AnchorPane.topAnchor="50.1484375">
+                                              <font>
+                                                  <Font name="System Bold" size="16.0" />
+                                              </font>
+                                          </Text>
+                                          <ImageView fx:id="imageFilm" fitHeight="181.0" fitWidth="114.0" layoutX="32.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="197.0" AnchorPane.rightAnchor="315.0" AnchorPane.topAnchor="102.0" />
+                                          <Text fx:id="directorTitle" fill="#616161" layoutX="170.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dirección:" AnchorPane.bottomAnchor="299.169921875" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="222.943359375" AnchorPane.topAnchor="166.861328125">
+                                              <font>
+                                                  <Font name="System Bold" size="12.0" />
+                                              </font>
+                                          </Text>
+                                          <Text fx:id="direcctorFilm" fill="#4a4a4a" layoutX="169.0" layoutY="197.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="182.13671875" AnchorPane.bottomAnchor="299.169921875" AnchorPane.leftAnchor="170.0" AnchorPane.rightAnchor="222.943359375" AnchorPane.topAnchor="166.861328125" />
+                                          <Text fx:id="añoTitle" fill="#616161" layoutX="169.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Año:" AnchorPane.bottomAnchor="299.169921875" AnchorPane.rightAnchor="222.943359375" AnchorPane.topAnchor="166.861328125">
+                                              <font>
+                                                  <Font name="System Bold" size="12.0" />
+                                              </font>
+                                          </Text>
+                                          <Text fx:id="añoFilm" fill="#4a4a4a" layoutX="170.0" layoutY="151.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" AnchorPane.bottomAnchor="299.169921875" AnchorPane.rightAnchor="222.943359375" AnchorPane.topAnchor="166.861328125" />
+                                          <Button fx:id="buttonSesion" layoutX="238.0" layoutY="427.0" mnemonicParsing="false" onMouseClicked="#clickFilmSesion" prefHeight="26.0" prefWidth="134.0" text="ver sesiones" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="104.0" />
+                                      </children>
+                        </AnchorPane>
+                                  <AnchorPane prefHeight="485.0" prefWidth="409.0" style="-fx-background-color: #00ebc4;" AnchorPane.bottomAnchor="-6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="453.0" AnchorPane.topAnchor="0.0">
+                                      <children>
+                                          <ListView fx:id="listViewFilms" layoutX="60.0" layoutY="52.0" onMouseClicked="#displaySelected" prefHeight="388.0" prefWidth="304.0" style="-fx-background-color: #00d1ae;" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="52.0">
+                                              <padding>
+                                                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                              </padding>
+                                          </ListView>
+                                      </children>
+                        </AnchorPane>
                             </children>
                         </AnchorPane>
                     </content>
